# ase-calculator-kit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: models.md
examples/: run_all_models.py
examples/dft/: README.md  create_dft_calculator_from_config.py  qe_pbe_relax.yaml  qe_pbe_static.yaml  vasp_pbe_relax.yaml  vasp_pbe_static.yaml
src/ase_calculator_kit/: __init__.py  config.py  device.py  dispersion.py  errors.py  factory.py  registry.py
src/ase_calculator_kit/backends/: __init__.py  base.py
src/ase_calculator_kit/backends/dft/: __init__.py  espresso.py  vasp.py
src/ase_calculator_kit/backends/mlip/: __init__.py  chgnet.py  fairchem.py  mattersim.py  nequip.py  sevennet.py
src/ase_umlip_kit/: __init__.py  config.py  device.py  dispersion.py  errors.py  factory.py  registry.py
src/ase_umlip_kit/backends/: __init__.py  base.py  chgnet.py  fairchem.py  mattersim.py  sevennet.py
tests/: conftest.py  test_config.py  test_device.py  test_dft_backends.py  test_dft_factory.py  test_dispersion.py  test_factory.py  test_fairchem_backend.py  test_mattersim_backend.py  test_nequip_backend.py  test_sevennet_backend.py  test_singlepoint_cpu.py
