[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ase-calculator-kit"
version = "0.1.0"
description = "Unified ASE calculator factory for MLIP and DFT calculators."
readme = "README.md"
requires-python = ">=3.12,<3.14"  # MatterSim requires >=3.12; fairchem-core caps at <3.14
license = { text = "MIT" }
authors = [{ name = "ishikawa-group" }]
keywords = ["ase", "calculator", "dft", "machine-learning", "interatomic-potential", "mlip", "chemistry", "materials"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]

# All four NNP backends are installed by default; individual extras below let a
# user reinstall / pin a single backend if desired.
dependencies = [
    "ase>=3.23",
    "pyyaml",
    "chgnet>=0.4.0",
    "sevenn",
    "mattersim",
    "fairchem-core>=2.16.0",
    "torch-dftd",  # Grimme-D3 dispersion correction (get_calculator(..., dispersion=True))
]

[project.optional-dependencies]
# All four backends are core dependencies above; only dev tooling lives here.
dev = ["pytest", "ruff", "tqdm"]

[project.urls]
Homepage = "https://github.com/ishikawa-group/ase-calculator-kit"
Repository = "https://github.com/ishikawa-group/ase-calculator-kit"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-m 'not slow'"
markers = [
    "slow: real single-point calculations that download model weights",
]
