[build-system]
requires = ["setuptools==82.0.1", "wheel==0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ase-calculator-kit"
version = "0.2.0"
description = "Unified ASE calculator factory for MLIP and DFT calculators."
readme = "README.md"
requires-python = ">=3.12,<3.14"  # MatterSim requires >=3.12; fairchem-core caps at <3.14
license = { text = "MIT" }
authors = [{ name = "ishikawa-group" }]
keywords = ["ase", "calculator", "dft", "machine-learning", "interatomic-potential", "mlip", "chemistry", "materials"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]

# All five MLIP backends are installed by default; individual extras below let a
# user reinstall / pin a single backend if desired.
dependencies = [
    "ase==3.28.0",
    "pyyaml==6.0.3",
    "chgnet==0.4.2",
    "sevenn==0.12.1",
    "mattersim==1.2.5",
    "nequip==0.18.0",
    "fairchem-core==2.20.0",
    "torch-dftd==0.5.3",  # Grimme-D3 dispersion correction (get_calculator(..., dispersion=True))
]

[project.optional-dependencies]
# All MLIP backends are core dependencies above; only dev tooling lives here.
dev = ["pytest==9.0.3", "ruff==0.15.15", "tqdm==4.67.3"]

[project.urls]
Homepage = "https://github.com/ishikawa-group/ase-calculator-kit"
Repository = "https://github.com/ishikawa-group/ase-calculator-kit"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-m 'not slow'"
markers = [
    "slow: real single-point calculations that download model weights",
]
